opam-version: "1.2"
maintainer:   "sheets@alum.mit.edu"
authors: [
              "David Sheets"
              "Anil Madhavapeddy"
              "Hugo Heuzard"
]
license:      "ISC"
homepage:     "https://github.com/mirage/ocaml-ipaddr"
bug-reports:  "https://github.com/mirage/ocaml-ipaddr/issues"
dev-repo:     "https://github.com/mirage/ocaml-ipaddr.git"
doc:          "https://mirage.github.io/ocaml-ipaddr/"

tags: [
  "org:mirage"
  "org:xapi-project"
]

build: [ "jbuilder" "build" "@install" ]
build-test: [ "jbuilder" "build" "@runtest" ]

depends: [
  "jbuilder" {build}
  "base-bytes"
  "ppx_sexp_conv"
  "ounit" {test}
]
depopts: [ "base-unix" ]
available: [ ocaml-version >= "4.02.2" ]
