(library
 (name        ipaddr)
 (public_name ipaddr)
 (modules ipaddr)
 (libraries macaddr))

(library
 (name        ipaddr_sexp)
 (public_name ipaddr.sexp)
 (modules ipaddr_sexp)
 (libraries ipaddr sexplib0))

(library
 (name        macaddr)
 (public_name macaddr)
 (modules macaddr))

(library
 (name        ipaddr_unix)
 (public_name ipaddr.unix)
 (modules ipaddr_unix)
 (libraries unix ipaddr))

(library
 (name        ipaddr_top)
 (public_name ipaddr.top)
 (modules ipaddr_top)
 (libraries ipaddr compiler-libs))
